<resources>
    <string name="app_name">Spirit Hunt</string>
    <string name="preferences_file">prefs</string>

    <!--Button String-->
    <string name="btn_login">Login</string>
    <string name="btn_create_game">Create Game</string>
    <string name="btn_join_game">Join Game</string>
    <string name="btn_store">Store</string>
    <string name="btn_settings">Settings</string>

    <!-- Login String -->
    <string name="saved_jwt">jwt</string>
    <string name="username_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_text"><u>Sign up</u></string>
    <string name="authentication_progress_title">Authenticating</string>
    <string name="authentication_progress_content">Please wait</string>
    <string name="authentication_alert_title">Authentication error</string>
    <string name="authentication_alert_content">Unable to login, are you sure the e-mail/password combination is correct?</string>
    <string name="authentication_alert_button">Try again</string>

    <!-- Logout String -->
    <string name="logout_title">Logging out</string>
    <string name="logout_content">Please wait...</string>
    <string name="logout_error_title">Logout Error</string>
    <string name="logout_error_content">Logout has failed. Please try again.</string>
    <string name="logout_error_btn">OK</string>

    <!-- Create Game String -->
    <string name="create_game_text_title">Create Game</string>
    <string name="create_game_text_set_area">Set your game area</string>
    <string name="create_game_text_time">min</string>
    <string name="create_game_btn_create">Create</string>
    <string name="create_game_btn_advanced">Advanced options</string>
    <string name="create_game_progress_title">Creating</string>
    <string name="create_game_progress_content">Please wait</string>
    <string name="create_game_alert_title">Error</string>
    <string name="create_game_alert_content">Unable to create the game, please check the fields and try again.</string>
    <string name="create_game_alert_button">Try again</string>
    <string name="create_game_select_location">"Long Press to select locations"</string>
    <string name="create_game_no_area_title">No area selected</string>
    <string name="create_game_no_area_content">Please select a game area by longpressing a point and a radius on the map.</string>
    <string name="create_game_area_too_large">The given area is too large.</string>

    <!-- Create Game Advanced String -->
    <string name="create_game_advanced_text_title">Advanced options</string>
    <string name="create_game_advanced_text_players">Players</string>
    <string name="create_game_advanced_text_rounds">Rounds</string>
    <string name="create_game_advanced_text_maxLives">Max lives</string>
    <string name="create_game_advanced_text_powerUps">Power-ups</string>
    <string name="create_game_advanced_btn_save">Save</string>

    <!--Lobby Strings-->
    <string name="lobby_title">Lobby</string>
    <string name="lobby_description"><i>The game will start shortly</i></string>

    <!--Setting String-->
    <string name="settings_title">Settings</string>
    <string name="settings_title_sound">Sound</string>
    <string name="settings_summary_sound">Use in-game sound</string>
    <string name="settings_title_vibration">Vibration</string>
    <string name="settings_summary_vibration">Use in-game vibration</string>

    <!--Game Join String-->
    <string name="join_game_text_title">Join game</string>
    <string name="join_game_scan_text_progress_title">Please wait</string>
    <string name="join_game_scan_text_progress_message">Retrieving the data</string>
    <string name="join_game_text_error_title">Oops!</string>
    <string name="join_game_text_error_button">OK</string>
    <string name="join_game_text_error_lobby_not_found">Could not find the game lobby</string>
    <string name="join_game_text_error_lobby_full">Unfortunately the lobby is already full</string>
    <string name="join_game_text_error_player_joined">You already joined a game</string>
    <string name="join_game_text_error_data">Server error, please try again</string>
    <string name="join_game_info_text_host">Host</string>
    <string name="join_game_info_text_mode">Mode</string>
    <string name="join_game_info_text_mode_gotcha">Gotcha</string>
    <string name="join_game_info_text_players">Players</string>
    <string name="join_game_info_button_join">Join</string>
    <string name="title_activity_maps">Map</string>

    <!-- Leaderboard String -->
    <string name="leaderboard_text_title">Leaderboard</string>
    <string name="leaderboard_rank">Rank</string>
    <string name="leaderboard_player">Player</string>
    <string name="leaderboard_score">Score</string>
    <string name="leaderboard_team">Team</string>

    <!-- Registration -->
    <string name="register_field_name">Name</string>
    <string name="register_field_email">E-mail</string>
    <string name="register_field_password">Password</string>
    <string name="register_button_act">Sign up!</string>
    <string name="register_busy_title">Signing up</string>
    <string name="register_busy_text">Just a second, we\'re signing you up.</string>
    <string name="register_alert_title">Registration failed</string>
    <string name="register_alert_button">Close</string>

    <!-- Authorisation errors -->
    <string name="auth_error_wrong_combination">Sorry, these credentials appear to be invalid.</string>
    <string name="auth_error_name_empty">You forgot to enter a name. This doesn\'t have to be your real name.</string>
    <string name="auth_error_name_short">Your name should be at least 3 characters.</string>
    <string name="auth_error_email_empty">Looks like you didn\'t enter an e-mail address yet. Would you mind doing this?</string>
    <string name="auth_error_email_taken">This e-mail has already been registered. Do you want to login instead?</string>
    <string name="auth_error_email_invalid">This e-mail appears to be invalid. Please check it</string>
    <string name="auth_error_password_empty">You forgot to enter a password.</string>
    <string name="auth_error_password_short">Your password should be at least 4 characters long. Anything will do! \uD83D\uDE09</string>

    <!--Google Maps API-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">null</string>

    <!-- Settings -->
    <string name="setting_logout_title">Log out</string>
    <string name="setting_logout_summary">Clear all account data from this device</string>
    <string name="setting_logout_key">logout</string>
    <string name="store_alert_title">Store unavailable</string>
    <string name="store_alert_message">Sorry, the store is not available right now.\nThis feature is not included in the Alpha version</string>
    <string name="store_alert_button">Okay</string>
    <string name="settings_cat_account">My account</string>

    <!-- Game screen -->
    <string name="game_powerup_consume">Use</string>
    <string name="game_powerup_consume_title">Consume powerup?</string>
    <string name="game_powerup_consume_desc">Would you like to consume the %s powerup?\nIt\'ll be removed from your inventory.</string>
    <string name="game_powerup_consume_yes">Yes</string>
    <string name="game_powerup_consume_no">No</string>
    <string name="game_tag">Tag Target!</string>
    <string name="join_game_scan_instruction">Scan the QR code of the game you\'d like to join.</string>

    <!-- Join game camera prompt -->
    <string name="join_game_camera_explain_title">Camera access required</string>
    <string name="join_game_camera_explain_text"><![CDATA[
    You can only join games by scanning QR codes.
    Please grant access to your camera to continue.
    ]]></string>
    <string name="join_game_camera_explain_no">Not now</string>
    <string name="join_game_camera_explain_yes">OK</string>

    <!-- Lobby -->
    <string name="lobby_text_area">Area</string>
    <string name="lobby_text_info">Info</string>
    <string name="lobby_text_qr">Invite</string>
    <string name="lobby_text_team_size">Team size: %1$dv%2$d</string>
    <string name="lobby_text_game_mode">Game mode: Gotcha</string>
    <string name="lobby_text_time_limit">Time limit: %dmin</string>
    <string name="lobby_text_amount_of_players">Players: %1$d/%2$d</string>
    <string name="lobby_text_progress_title">Loading</string>
    <string name="lobby_text_progress_content">Please wait</string>
    <string name="lobby_text_dialog_no_host_title">Host left</string>
    <string name="lobby_text_dialog_no_host_content">Unfortunately the host left</string>
    <string name="lobby_text_dialog_not_enough_players_title">Not enough players in lobby</string>
    <string name="lobby_text_dialog_not_enough_players_content">You need at least two players to start a game</string>
    <string name="lobby_text_dialog_button">OK</string>
    <string name="lobby_btn_start">Start</string>

    <!-- Game location prompt -->
    <string name="game_location_explain_title">Location access required</string>
    <string name="game_location_explain_text_create"><![CDATA[
    Before you can start this game, you need to share your location.
    This is required for the game to function.
    ]]></string>
    <string name="game_location_explain_text_join"><![CDATA[
    Before you can join this game, you need to share your location.
    This is required for the game to function.
    ]]></string>
    <string name="game_location_explain_no">Cancel</string>
    <string name="game_location_explain_yes">OK</string>

    <!-- Starting lobby -->
    <string name="game_start_dialog_title">Game commencing</string>
    <string name="game_start_dialog_message">Stand by, the hunt starts soon&#8230;</string>
    <string name="game_end_action">End game</string>

    <!-- Creating game, asking for location -->
    <string name="create_game_location_explain_title">Device location required</string>
    <string name="create_game_location_explain_message">To create a game, you need to grant access to this device\'s current location.</string>
    <!-- Options as described in https://material.io/guidelines/style/writing.html#writing-language -->
    <string name="create_game_location_explain_positive">OK</string>
    <string name="create_game_location_explain_negative">Not now</string>

    <!-- Joining game, asking for location -->
    <string name="join_game_location_explain_title">Device location required</string>
    <string name="join_game_location_explain_message">To join this game, you need to grant access to this device\'s current location.</string>
    <!-- Options as described in https://material.io/guidelines/style/writing.html#writing-language -->
    <string name="join_game_location_explain_positive">OK</string>
    <string name="join_game_location_explain_negative">Not now</string>
</resources>
