<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/settings_title">
        <CheckBoxPreference
            android:enabled="false"
            android:key="settings_sound"
            android:defaultValue="true"
            android:title="@string/settings_title_sound"
            android:summary="@string/settings_summary_sound" />
        <CheckBoxPreference
            android:key="settings_vibration"
            android:defaultValue="true"
            android:title="@string/settings_title_vibration"
            android:summary="@string/settings_summary_vibration" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title='@string/settings_cat_account'>
        <Preference
            android:title="@string/setting_logout_title"
            android:summary="@string/setting_logout_summary"
            android:key="@string/setting_logout_key" />
    </PreferenceCategory>


</PreferenceScreen>
