<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context="controller.RegisterController">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical">

        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/gui_el_logo_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <android.spirithunt.win.gui.CustomEditText style="@style/editText_normal_main"
            android:id="@+id/register_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_field_name"
            android:inputType="text"
            android:layout_marginBottom="7dp" />

        <android.spirithunt.win.gui.CustomEditText style="@style/editText_normal_main"
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_field_email"
            android:layout_below="@id/register_name"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="7dp" />

        <android.spirithunt.win.gui.CustomEditText style="@style/editText_normal_main"
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_field_password"
            android:layout_below="@id/register_email"
            android:inputType="textPassword"
            android:layout_marginBottom="7dp" />

        <android.spirithunt.win.gui.CustomButton
            style="@style/btn_normal_main_large"
            android:id="@+id/register_button"
            android:text="@string/register_button_act"
            android:onClick="submitForm"
            android:layout_marginBottom="25dp" />

        <TextView
            android:id="@+id/text_error"
            android:textColor="@color/colorError"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="64sp"/>

    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
