<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <win.spirithunt.android.gui.CustomTextView
        style="@style/textView_normal_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        android:textSize="42sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top view -->
        <include
            android:id="@+id/playermap"
            layout="@layout/section_playermap" />
    </LinearLayout>

    <!-- Bottom view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <win.spirithunt.android.gui.CustomButton
            style="@style/btn_normal_main_large"
            android:id="@+id/game_consume"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:onClick="onClick"
            android:text="@string/game_powerup_consume" />

        <win.spirithunt.android.gui.CustomButton
            style="@style/btn_normal_main_large"
            android:id="@+id/game_tag"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/game_tag" />
    </RelativeLayout>

    <!-- Tab bar interface -->
    <!-- TODO -->

</LinearLayout>
