<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatImageView
        android:src="@drawable/btn_normal_exit"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:onClick="close"
        android:adjustViewBounds="true" />
    <android.spirithunt.win.gui.CustomTextView
        style="@style/textView_normal_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/create_game_advanced_text_title" />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.spirithunt.win.gui.CustomTextView
                    style="@style/textView_normal_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/create_game_advanced_text_players" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_left"
                            android:layout_marginEnd="5dp"
                            android:onClick="subtractAmountOfPlayers"/>
                        <android.spirithunt.win.gui.CustomTextView
                            style="@style/textView_normal_main"
                            android:id="@+id/amount_of_players"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textSize="25sp"
                            android:textAlignment="center" />
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_right"
                            android:layout_marginStart="5dp"
                            android:onClick="addAmountOfPlayers"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <android.spirithunt.win.gui.CustomTextView
                    style="@style/textView_normal_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/create_game_advanced_text_rounds" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_left"
                            android:layout_marginEnd="5dp"
                            android:onClick="subtractAmountOfRounds"/>
                        <android.spirithunt.win.gui.CustomTextView
                            style="@style/textView_normal_main"
                            android:id="@+id/amount_of_rounds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textSize="25sp"
                            android:textAlignment="center" />
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_right"
                            android:layout_marginStart="5dp"
                            android:onClick="addAmountOfRounds" />
                    </android.support.v7.widget.LinearLayoutCompat>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <android.spirithunt.win.gui.CustomTextView
                    style="@style/textView_normal_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/create_game_advanced_text_maxLifes" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_left"
                            android:layout_marginEnd="5dp"
                            android:onClick="subtractAmountOfLifes" />
                        <android.spirithunt.win.gui.CustomTextView
                            style="@style/textView_normal_main"
                            android:id="@+id/amount_of_lifes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textSize="25sp"
                            android:textAlignment="center" />
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_right"
                            android:layout_marginStart="5dp"
                            android:onClick="addAmountOfLifes" />
                    </android.support.v7.widget.LinearLayoutCompat>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <android.spirithunt.win.gui.CustomTextView
                    style="@style/textView_normal_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/create_game_advanced_text_powerUps" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true">
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_left"
                            android:layout_marginEnd="5dp"
                            android:onClick="disablePowerUps" />
                        <android.spirithunt.win.gui.CustomTextView
                            style="@style/textView_normal_main"
                            android:id="@+id/power_ups_enabled"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textSize="25sp"
                            android:textAlignment="center" />
                        <android.spirithunt.win.gui.CustomButton
                            style="@style/btn_normal_arrow_right"
                            android:layout_marginStart="5dp"
                            android:onClick="enablePowerUps" />
                    </android.support.v7.widget.LinearLayoutCompat>
                </RelativeLayout>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <android.spirithunt.win.gui.CustomButton
            style="@style/btn_normal_main_large"
            android:layout_width="220dp"
            android:layout_centerInParent="true"
            android:text="@string/create_game_advanced_btn_save"
            android:onClick="closeWithResult" />
    </RelativeLayout>
</LinearLayout>
